# ulidgen

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: format.yml  release.yaml  test.yaml
src/: lib.rs  main.rs
