[package]
name = "ulidgen"
version = "0.1.0"
edition = "2024"
authors = ["Federico Antuña <fede.spiral367@slmail.me>"]
categories = ["command-line-utilities"]
description = "ulidgen is a simple and lightweight ULID generator."
homepage = "https://github.com/fedeantuna/ulidgen"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fedeantuna/ulidgen"

[dependencies]
regex = "1.12.2"
time = { version = "0.3.44", features = ["parsing"] }
ulid = "1.2.1"

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
